// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/progress_bar progress bar match snapshot 1`] = `
<div
  className="ProgressBar  null"
  onClick={[Function]}
>
  <svg
    fill="none"
    height="4"
    viewBox="0 0 50 4"
    width={50}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#3D3C40"
      fillOpacity="0.16"
      height="4"
      rx="2"
      width={50}
    />
    <rect
      fill="#166DE0"
      height="4"
      rx="2"
      width="5"
    />
  </svg>
</div>
`;

exports[`admin_console/progress_bar progress bar shows 10% 1`] = `
<Memo(ProgressBar)
  percentage={10}
  showPercentageTex={true}
  width={50}
>
  <div
    className="ProgressBar  null"
    onClick={[Function]}
  >
    <svg
      fill="none"
      height="4"
      viewBox="0 0 50 4"
      width={50}
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        fill="#3D3C40"
        fillOpacity="0.16"
        height="4"
        rx="2"
        width={50}
      />
      <rect
        fill="#166DE0"
        height="4"
        rx="2"
        width="5"
      />
    </svg>
    <span
      className="percetageText"
    >
      10%
    </span>
  </div>
</Memo(ProgressBar)>
`;

exports[`admin_console/progress_bar progress bar shows right title 1`] = `
<Memo(ProgressBar)
  percentage={10}
  showPercentageTex={true}
  title={
    <FormattedMessage
      defaultMessage="Import in Progress"
      id="admin.general.importInProgress"
    />
  }
  width={50}
>
  <div
    className="ProgressBar  null"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Import in Progress"
      id="admin.general.importInProgress"
    >
      <span>
        Import in Progress
      </span>
    </FormattedMessage>
    <svg
      fill="none"
      height="4"
      viewBox="0 0 50 4"
      width={50}
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        fill="#3D3C40"
        fillOpacity="0.16"
        height="4"
        rx="2"
        width={50}
      />
      <rect
        fill="#166DE0"
        height="4"
        rx="2"
        width="5"
      />
    </svg>
    <span
      className="percetageText"
    >
      10%
    </span>
  </div>
</Memo(ProgressBar)>
`;
